2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/16_pirnt_plusieurs_srting.deca
// Description:
//    Programme print plusieurs elements
// Resultats:
//     Bonjour hello evry body
//
// Historique:
//    cree le 20/12/2023


{
    print("Bonjour ", "hello ", "every ", "body");
}