2A/05_Projet_GL/src/test/deca/syntax/invalid/HelloWorld/08_PrintMultLine.deca
// Description:
//    Programme print plusieurs lignes, qui n'est pas valable pour print
//
// Resultats:
//    Erreur syntaxique :ligne 10:10: extraneous input '" hell\n    world "' expecting ')'
//
// Historique:
//    cree le 20/12/2023
{
    print(" hell
    world ");
}